k8s/7-pega-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-backing-services-deployment
  namespace: pega
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pega-backing-services
  template:
    metadata:
      labels:
        app: pega-backing-services
    spec:
      securityContext:
        runAsUser: 9001
      volumes:
        - name: pega-kafka-volume
          persistentVolumeClaim:
            claimName: pega-backing-services-pvc
        - name: pega-search-volume
          persistentVolumeClaim:
            claimName: pega-backing-services-pvc                      
      containers:
      - name: pega-backing-services
        image: pega-pe:latest
        imagePullPolicy: Never
        volumeMounts:
          - name: pega-kafka-volume
            mountPath: /opt/pega/kafkadata
        volumeMounts:
          - name: pega-search-volume
            mountPath: /search_index
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-web-deployment
  namespace: pega
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pega-web
  template:
    metadata:
      labels:
        app: pega-web
    spec:
      securityContext:
        runAsUser: 9001
      containers:
      - name: pega-web
        image: pega-pe:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
