k8s/10-pega-monitors.yml
apiVersion: v1
kind: Service
metadata:
  name: pega-web-monitoring-service
  namespace: pega
  labels:
    app: pega-monitoring  
spec:
  type: ClusterIP
  selector:
    app: pega-web
  ports:
  - name: metrics
    port: 9100
    protocol: TCP
    targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: pega-background-monitoring-service
  namespace: pega
  labels:
    app: pega-monitoring 
spec:
  type: ClusterIP
  selector:
    app: pega-backing-services
  ports:
  - name: metrics
    port: 9100
    protocol: TCP
    targetPort: 9100
