k8s/4-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: pega
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
